Add a few line as html

--- a/index.html
+++ b/index.html
@@ -1,5 +1,12 @@
+<html>
+<body>
+
 <h1>yazhouliu's HomePage</h1>
 If everything works, I am going to move my home page here.
 
+<p>
+布啦布啦Logo图片：<img src="./images/200872823380314_2.jpg" alt="弗雷德">
+</p>
 
-
+</body>
+</html>
